--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -81,18 +81,11 @@
 
 html,
 body {
-  max-width: 100vw;
+  min-height: 100vh;
+  width: 100vw;
   overflow-x: hidden;
-}
-
-body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: rgb(255, 255, 219);
 }
 
 a {
