--- a/src/app/component/home.module.css
+++ b/src/app/component/home.module.css
@@ -5,6 +5,12 @@
   align-items: center;
 }
 
+@media (max-width: 600px) {
+  .main {
+    padding: 30px;
+  }
+}
+
 .container {
   display: flex;
   flex-direction: column;
