--- a/src/app/todolist/(component)/todoList.module.css
+++ b/src/app/todolist/(component)/todoList.module.css
@@ -1,6 +1,6 @@
 .container {
   background-color: white;
-  width: 1400px;
+  width: 90%;
   min-height: 800px;
   height: 100%;
   display: flex;
@@ -21,7 +21,7 @@
   font-size: 2.6rem;
   position: relative;
   left: 50px;
-  top:30px;
+  top: 30px;
   cursor: pointer;
   opacity: 0.6;
 }
@@ -53,6 +53,52 @@
 .main {
   display: flex;
   flex-direction: column;
-  padding: 0 150px;
+  padding: 0 120px;
   align-items: center;
+}
+
+@media (max-width: 1100px) {
+  .main {
+    padding:0 50px
+  }
+}
+
+@media (max-width: 850px) {
+  .container {
+    width: 350px;
+    min-height: 100px;
+    align-items: center;
+  }
+
+  .header {
+    height: 100%;
+    width: 300px;
+    padding-bottom: 30px;
+    padding-right: 20px;
+  }
+  .header h1 {
+    font-size: 2rem;
+  }
+  .homeIcon {
+    cursor: pointer;
+    opacity: 0.6;
+    top: 10px;
+    left: 20px;
+    font-size: 2rem;
+  }
+
+  .addBtn {
+    font-size: 3rem;
+    height: 100%;
+    margin-right: 0;
+    position: relative;
+    bottom:13px
+  }
+
+  .main {
+    display: flex;
+    flex-direction: column;
+    padding: 0 0 50px 0;
+    align-items: center;
+  }
 }
