--- a/src/app/component/addTodoModal.module.css
+++ b/src/app/component/addTodoModal.module.css
@@ -67,7 +67,7 @@
 .input label {
   font-size: 1rem;
   margin-bottom: 5px;
-  font-weight: 500;
+  font-weight: 600;
 }
 .textarea {
   width: 300px;
@@ -93,7 +93,7 @@
 .date label {
   font-size: 1rem;
   margin-bottom: 5px;
-  font-weight: 500;
+  font-weight: 600;
 }
 
 .dateBox {
@@ -196,4 +196,30 @@
     min-width: 70%;
     max-height: 400px;
   }
+
+  .input {
+    width: 230px;
+  }
+  .textarea {
+    width: 100%;
+  }
+
+  .dateBox {
+    width: 230px;
+  }
+
+  .datePicker{
+    width: 100%;
+  
+}
+.btnBox {
+  padding-right: 10px;
+}
+.addBtn {
+  width: 40%;
+}
+
+.resetBtn {
+  width: 30%;
+}
 }
