--- a/src/app/todolist/(component)/todoList.module.css
+++ b/src/app/todolist/(component)/todoList.module.css
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
   border-radius: 3rem;
-  padding: 50px;
+  padding: 35px 0;
 }
 
 .header {
@@ -59,7 +59,7 @@
 
 @media (max-width: 1100px) {
   .main {
-    padding:0 50px
+    padding: 0 50px;
   }
 }
 
@@ -92,7 +92,7 @@
     height: 100%;
     margin-right: 0;
     position: relative;
-    bottom:13px
+    bottom: 13px;
   }
 
   .main {
