--- a/src/app/todolist/(component)/todo.module.css
+++ b/src/app/todolist/(component)/todo.module.css
@@ -90,6 +90,11 @@
     margin-left: 30px;
     width: 80%;
   }
+
+  .completedBox {
+    margin-left: 30px;
+    width: 80%;
+  }
   .date {
     font-size: 0.8rem;
   }
